--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "firebase": "^10.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-geolocated": "^4.1.2",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1"
   },
